2025-06-30T02:20:09Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/15962347594 # 1374
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-06-30
* notice: query file size: 26208
* notice: accum prev / next / diff: re vi: 0 3643 / 0 3644 / +0 +1

2025-06-29T02:25:34Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/15950589902 # 1372
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-06-29
* notice: query file size: 26208
* notice: accum prev / next / diff: re vi: 0 3640 / 0 3643 / +0 +3

2025-06-28T12:49:54Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/15944313512 # 1371
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-06-28
* notice: query file size: 26208
* notice: accum prev / next / diff: re vi: 0 3637 / 0 3640 / +0 +3

2025-06-27T12:53:43Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/15926774843 # 1369
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-06-27
* notice: query file size: 26208
* notice: accum prev / next / diff: re vi: 0 3636 / 0 3637 / +0 +1

2025-06-24T02:08:46Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/15839457328 # 1362
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-06-24
* notice: query file size: 26208
* notice: accum prev / next / diff: re vi: 0 3634 / 0 3636 / +0 +2

2025-06-20T02:07:01Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/15769646427 # 1354