@@ -1,3 +1,9 @@
+2025-06-30T12:55:07Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/15973491993 # 1375
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-06-30
+* notice: query file size: 26208
+* notice: accum prev / next / diff: re vi: 0 3644 / 0 3645 / +0 +1
+
 2025-06-30T02:20:09Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/15962347594 # 1374
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-06-30
